iac/k8s/namespaces/ai-form-creator/back-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: back
spec:
  selector:
    app: back
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
