iac/k8s/namespaces/ai-form-creator/front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front
spec:
  selector:
    app: front
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
